fix: links' id. Unwrap the link in a button div

--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -20,7 +20,8 @@ main,
     border-radius: 8px;
     border: none;
     background: #EAECF0;
-    cursor: auto;
+    display: grid;
+    place-items: center;
 }
 
 .button {
